# oscar-airflow-executor

./: README.md
apache-airflow-providers-oscar/: Dockerfile  integration_test.py  pyproject.toml
apache-airflow-providers-oscar/airflow/providers/oscar/executors/: oscar_executor.py
apache-airflow-providers-oscar/airflow/providers/oscar/hooks/: oscar_hook.py
apache-airflow-providers-oscar/airflow/providers/oscar/triggers/: oscar_trigger.py
executor/: service.yaml
exposed_services_k8executor/api-server/: fdl.yaml
exposed_services_k8executor/extras/: airflow-rbac.yaml
exposed_services_k8executor/processor/: entrypoint.sh  fdl.yaml
exposed_services_k8executor/scheduler/: entrypoint.sh  fdl.yaml
exposed_services_oscarexecutor/airflow-oscar/: Dockerfile  oscar_executor.py
exposed_services_oscarexecutor/api-server/: entrypoint.sh  fdl.yaml
exposed_services_oscarexecutor/executor/: fdl.yaml  script.sh
exposed_services_oscarexecutor/metadatadb/: entrypoint.sh
exposed_services_oscarexecutor/processor/: entrypoint.sh  fdl.yaml
exposed_services_oscarexecutor/scheduler/: fdl_oscar_executor.yaml
metadatadb/: Dockerfile  app.py  secret.yaml  service.yaml
